--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: "Roboto", sans-serif;
+  font-family: "Quicksand", sans-serif;
 }
 
 /* theme */
@@ -14,9 +14,12 @@
     --color-primary: 255 255 255;
     --color-secondary: 245 245 245;
     --color-ascent1: 0 0 0;
+    --color-red: 196 18 63;
   }
   [data-theme="dark"] {
     --color-primary: 0 0 0;
     --color-ascent1: 255 255 255;
   }
 }
+
+
