--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,17 +8,35 @@
   font-family: "Quicksand", sans-serif;
 }
 
+::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
 /* theme */
 @layer base {
   :root {
     --color-primary: 255 255 255;
     --color-secondary: 245 245 245;
-    --color-ascent1: 0 0 0;
+    --color-bg: 247 247 247;
+    --color-ascent-1: 0 0 0;
+    --color-ascent-2: 89 91 100;
     --color-red: 196 18 63;
   }
   [data-theme="dark"] {
     --color-primary: 0 0 0;
-    --color-ascent1: 255 255 255;
+    --color-ascent-1: 255 255 255;
+  }
+}
+
+@layer utilities {
+  .text-shadow-complex {
+    text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
+      0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1),
+      0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2),
+      0 5px 10px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.2),
+      0 20px 20px rgba(0, 0, 0, 0.15);
   }
 }
 
