--- a/client/src/index.css
+++ b/client/src/index.css
@@ -32,6 +32,10 @@
   }
 }
 
+.ant-spin .ant-spin-dot-item {
+  background-color: rgb(196, 18, 63); 
+}
+
 @layer utilities {
   .text-shadow-complex {
     text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9,
@@ -41,7 +45,6 @@
       0 20px 20px rgba(0, 0, 0, 0.15);
   }
 }
-
 
 .slider-slide {
   transition: transform 0.5s ease;
